2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
	  template formatting.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Fixed syntax style verification.

2009-09-09  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.SourceEditor.OptionPanels/HighlightingPanel.cs:
	  Set the dialog transient to our widgets toplevel.

2009-09-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  537375 - Completed text not immediately updated'.

2009-09-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed build.

2009-09-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fold actions
	  now re calculate the vertical scrollbar.

2009-08-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.addin.xml: Insert the text editor
	  extension node in the default display binding group.

2009-08-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug
	  534735 - Write-permission cleared on save".

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/IdeViMode.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed
	  compiler warnings.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor.csproj: Updated dependencies. We
	  now depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs: Track
	  API changes.

2009-08-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Auto save is