@@ -1,3 +1,9 @@
+2009-09-11  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorView.cs:
+	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed code
+	  completion + auto insert braces bug.
+
 2009-09-10  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Worked on
